# esp-cortex

./: .gitignore  CMakeLists.txt  EspCortex_Progress.md  README.md  partitions.csv  sdkconfig
.claude/: settings.local.json
components/common/include/: debug_log.hpp  shared_types.h
components/ekf/: CMakeLists.txt  ekf.cpp
components/ekf/include/: ekf.hpp
components/i2c_bus/: CMakeLists.txt  i2c_bus.cpp
components/i2c_bus/include/: i2c_bus.h
components/icm42688/: CMakeLists.txt  icm42688.cpp
components/icm42688/include/: icm42688.h
components/icp20100/: CMakeLists.txt  icp20100.cpp
components/icp20100/include/: icp20100.h
components/lps22hh/: CMakeLists.txt  lps22hh.cpp
components/param_registry/: CMakeLists.txt  param_registry.cpp
components/qmc5883l/: CMakeLists.txt  qmc5883l.cpp
components/spi_bus/: CMakeLists.txt  spi_bus.cpp
components/spiffs_manager/: CMakeLists.txt  spiffs_manager.cpp
components/web_server/: CMakeLists.txt  web_server.cpp
components/wifi_manager/: CMakeLists.txt  wifi_manager.cpp
data/: app.js  index.html  style.css
docs/: development.md  ekf.md  param_system.md  sensor.md  telemetry_30hz_update.md  web_server.md
main/: CMakeLists.txt  command_queue.hpp  idf_component.yml  main.cpp  robot_bus.hpp  topic.hpp
main/include/: board_config.h  command_queue.hpp  robot_bus.hpp  shared_types.h  topic.hpp
main/modules/estimator/: task_estimator.cpp  task_estimator.hpp
main/modules/sensor/: task_sensor.cpp  task_sensor.h
main/modules/telemetry/: task_telemetry.cpp  task_telemetry.h
(+7 files in other folders)
